# llm-zoomcamp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  agentic_rag.py  ingest_in_sqlitesearch.ipynb  notebook.ipynb  pyproject.toml  query_with_agentic_rag.ipynb  query_with_toyaikit.ipynb  rag.py  rag_with_minsearch.ipynb  rag_with_sqlitesearch.ipynb
.agents/skills/implement-approved-plan/: SKILL.md
.agents/skills/implement-approved-plan/agents/: openai.yaml
.agents/skills/wrap-up/: SKILL.md
.agents/skills/wrap-up/agents/: openai.yaml
.agents/skills/wrap-up/scripts/: validate_commit_title.py
.claude/: settings.json
.codex/: config.toml
.codex/agents/: implementation-executor-mini.toml  implementation-executor.toml
01-agentic-rag/: homework.ipynb  homework_rag_helper.py  ingest_in_minsearch.py  ingest_in_sqlitesearch.ipynb  notebook.ipynb  query_with_agentic_rag.ipynb  query_with_toyaikit.ipynb  rag.py  rag_with_minsearch.ipynb  rag_with_sqlitesearch.ipynb
02-vector-search/: homework.ipynb  notebook.ipynb  query_with_pgvector.ipynb  query_with_semantic_agentic_rag.ipynb
03-orchestration/: docker-compose.yml  notebook.ipynb
04-evaluation/: evaluation.ipynb  evaluation_utils.py  homework.ipynb  notebook.ipynb  rag_answers_evaluation.ipynb
04-evaluation/data/: faq_ground_truth.csv  homework_ground_truth.csv  rag_judge_cases.csv  rag_judged_cases.csv  rag_judged_cases.xlsx
05-monitor/: app.py  assistant.py  dashboard.py  dashboard_rendering.py  docker-compose.yml  generate_synthetic_data.py  homework.ipynb  initialize_monitoring_database.py  judge.py  run_rendering.py
doc/: rag-architecture.md
lib/: __init__.py  agentic_rag.py  index_storage.py  json_utils.py  llm.py  metrics.py  monitoring_store.py  search.py  search_types.py  sources.py  types.py
scripts/: __init__.py  embedder.py  start_pgvector.py
workshops/dlt/: 2026-07-19_agent_traces_pipeline_analysis_plan.md  2026-07-19_claude_logs_pipeline_analysis_plan.md  COMMANDS.md  __deployment__.py  filesystem_pipeline.py  homework.py  pyproject.toml  rest_api_pipeline.py
workshops/dlt/.dlt/: .toolkits  config.toml
workshops/dlt/dashboards/: agent_traces_pipeline_dashboard.py  claude_logs_pipeline_dashboard.py
workshops/dlt/layouts/: homework.grid.json  homework.slides.json
