[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Coursework and experiments for DataTalksClub's LLM Zoomcamp."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.27.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydash>=8.0.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
    "tokenizers>=0.22.2",
    "toolz>=1.1.0",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.2",
]

[project.optional-dependencies]
legacy-st = [
    "sentence-transformers>=5.6.0",
]

[tool.setuptools.packages.find]
include = ["lib*", "scripts*"]

[tool.pyright]
include = [
    "04-evaluation/evaluation_utils.py",
    "lib/agentic_rag.py",
    "lib/index_storage.py",
    "lib/llm.py",
    "lib/search.py",
    "lib/search_types.py",
    "lib/sources.py",
    "lib/types.py",
]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "huggingface-hub>=1.20.1",
    "jupyter>=1.1.1",
    "pandas-stubs>=3.0.3.260530",
    "pyright>=1.1.411",
]
