[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Coursework and experiments for DataTalksClub's LLM Zoomcamp."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.27.0",
    "openai>=2.41.1",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydash>=8.0.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
    "streamlit>=1.59.1",
    "tokenizers>=0.22.2",
    "toolz>=1.1.0",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.2",
]

[project.optional-dependencies]
legacy-st = [
    "sentence-transformers>=5.6.0",
]

[tool.setuptools.packages.find]
include = ["lib*", "scripts*"]

[tool.pyright]
include = [
    "04-evaluation/homework.ipynb",
    "04-evaluation/notebook.ipynb",
    "02-vector-search/homework.ipynb",
    "01-agentic-rag/homework.ipynb",
    "01-agentic-rag/homework_rag_helper.py",
    "01-agentic-rag/rag.py",
    "04-evaluation/evaluation_utils.py",
    "lib/__init__.py",
    "lib/agentic_rag.py",
    "lib/json_utils.py",
    "lib/index_storage.py",
    "lib/llm.py",
    "lib/metrics.py",
    "lib/monitoring_store.py",
    "lib/search.py",
    "lib/search_types.py",
    "lib/sources.py",
    "lib/types.py",
    "05-monitor/assistant.py",
    "05-monitor/app.py",
    "05-monitor/dashboard.py",
    "05-monitor/dashboard_rendering.py",
    "05-monitor/generate_synthetic_data.py",
    "05-monitor/homework.ipynb",
    "05-monitor/initialize_monitoring_database.py",
    "05-monitor/judge.py",
    "05-monitor/run_rendering.py",
    "workshops/dlt/filesystem_pipeline.py",
    "workshops/dlt/rest_api_pipeline.py",
    "workshops/dlt/dashboards",
]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
# Notebook cells intentionally use bare expressions for display output.
reportUnusedExpression = "none"

[[tool.pyright.executionEnvironments]]
# marimo cell parameters are intentionally unannotated (reactive dependency
# injection is how marimo wires cells together), and dlt's dataset(sql).df()
# is inherently Any. Both are unfixable at this file without fighting the
# tools that generate and run it, so the "Unknown" cascade rules are scoped
# off for every marimo dashboard here rather than for the whole project.
# New dashboards land in this directory automatically — no edit needed here.
# extraPaths override: dlt/marimo/altair etc. live only in workshops/dlt's
# own venv (scoped there — see workshops/dlt/pyproject.toml), not the root
# one, so import resolution needs this site-packages dir added explicitly.
root = "workshops/dlt/dashboards"
extraPaths = ["workshops/dlt/.venv/Lib/site-packages"]
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"

[[tool.pyright.executionEnvironments]]
# Same extraPaths override as above, for the dlt pipeline scripts (no
# Unknown-rule suppression needed here — these should type-check clean
# under full strict mode once import resolution works).
root = "workshops/dlt"
extraPaths = ["workshops/dlt/.venv/Lib/site-packages"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# E4/E7/E9: high-signal pycodestyle errors; F: Pyflakes correctness checks;
# I: import sorting. Keep this small so Ruff handles hygiene without becoming noisy.
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
dev = [
    "huggingface-hub>=1.20.1",
    "jupyter>=1.1.1",
    "pandas-stubs>=3.0.3.260530",
    "pyright>=1.1.411",
    "ruff>=0.15.20",
]
